# src/controllers/contact.controller.js
@@ -1,7 +1,7 @@
-import ApiService from '../services/api.service.js'
+import ContactService from '../services/contact.service.js'
 import { sendSuccess, sendError } from '../utils/responseMessage.js';
 
-class ApiController {
+class ContactController {
   constructor() {
     //
   }
@@ -9,7 +9,7 @@ class ApiController {
     static async getProfessional(req, res, next) { 
 
         try {
-            const result = await ApiService.getProfessional()
+            const result = await ContactService.getProfessional()
              return res.json(result[0]);
         } catch (error) {
             sendError(res, error.message || 'Failed to retrieve professional', error.statusCode || 500);
@@ -20,7 +20,7 @@ class ApiController {
     static async createContact(req, res, next){
         try{
            const data = req.body;
-           const result = await ApiService.createContact(data);
+           const result = await ContactService.createContact(data);
            sendSuccess(res, result, 'New contact created successfully')
         }catch(error){
             sendError(res, error.message || 'Failed to create new contact', error.statusCode || 500);
@@ -31,7 +31,7 @@ class ApiController {
       static async getContact(req, res, next){
         try{
         const contactId = req.params.contactId
-           const result = await ApiService.getContact(contactId);
+           const result = await ContactService.getContact(contactId);
            sendSuccess(res, result, 'The operation was successful');
         }catch(error){
             sendError(res, error.message || 'Failed to retrieve a contact', error.statusCode || 500);
@@ -41,7 +41,7 @@ class ApiController {
 
       static async getAllContacts(req, res, next){
       try{
-           const result = await ApiService.getContacts();
+           const result = await ContactService.getContacts();
            sendSuccess(res, result, 'The operation was successful');
         }catch(error){
             sendError(res, error.message || 'Failed to retrieve a contact', error.statusCode || 500);
@@ -53,7 +53,7 @@ class ApiController {
         try{
             const contactId = req.params.contactId;
             const data = req.body;
-           const result = await ApiService.updateContact(contactId, data);
+           const result = await ContactService.updateContact(contactId, data);
            sendSuccess(res, result, 'The data successfully updated');
         }catch(error){
             sendError(res, error.message || 'Failed to update a contact', error.statusCode || 500);
@@ -64,7 +64,7 @@ class ApiController {
     static async deleteContact(req, res, next){
         try{
             const contactId = req.params.contactId;
-           const result = await ApiService.deleteContact(contactId);
+           const result = await ContactService.deleteContact(contactId);
            sendSuccess(res, result, 'The contact deleted successfully');
         }catch(error){
             sendError(res, error.message || 'Failed to delete a contact', error.statusCode || 500);
@@ -74,4 +74,4 @@ class ApiController {
 
 }
 
-export default ApiController;
+export default ContactController;
